--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   country_code_picker: ^3.0.0
   font_awesome_flutter: ^10.7.0
+  curved_navigation_bar: ^1.0.6
+  fl_chart: ^0.69.0
   get:
 
 dev_dependencies:
