--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   curved_navigation_bar: ^1.0.6
   fl_chart: ^0.69.0
+  intl_phone_field: ^3.2.0
   get:
 
 dev_dependencies:
